[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Ranchers-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/BungeeShade-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/mixkit-game-click-1114.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.568627 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 326.0
margin_top = 153.0
margin_right = 633.0
margin_bottom = 387.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 307.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 307.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 30 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 307.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 2 )
text = "Resume Game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterContainer/VBoxContainer/ResumeButton"]
stream = ExtResource( 4 )

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 307.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 3 )
text = "Go To Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
